--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ae39e8
-	base = 1d9775e
-	trim = 
-	trimbase = 
+	base = 7e3c613
+	trim = ign_ros2_control_demos
+	trimbase = 1d9775e
