--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ae39e8
-	base = 53a724d
-	trim = 
-	trimbase = 
+	base = 6375b33
+	trim = ign_ros2_control
+	trimbase = 53a724d
