--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/ign_ros2_control_demos
-	previous = 
-	base = 7e3c613
+	previous = 7e3c613
+	base = 70cd7b8
 	trim = 
 	trimbase = 
