--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/ign_ros2_control_demos
-	previous = 
-	base = 463aca9
+	previous = 463aca9
+	base = 9fffca5
 	trim = 
 	trimbase = 
