--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/ign_ros2_control
-	previous = 
-	base = 6375b33
+	previous = 6375b33
+	base = 47f7489
 	trim = 
 	trimbase = 
