--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/ign_ros2_control
-	previous = 
-	base = 1ff0957
+	previous = 1ff0957
+	base = 8e462b4
 	trim = 
 	trimbase = 
