--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ae39e8
-	base = dca5d3b
+	base = 1352f32
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = dca5d3b
