--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ae39e8
-	base = e0e2c79
+	base = 85012e0
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = e0e2c79
