--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 19a322a
-	base = ce8afe8
+	base = 4db2756
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = ce8afe8
