--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 19a322a
-	base = 084ae92
+	base = a716b7f
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 084ae92
