--- a/ign_ros2_control/package.xml
+++ b/ign_ros2_control/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>ign_ros2_control</name>
-  <version>0.1.2</version>
+  <version>0.2.0</version>
   <description>Ignition ros2_control package allows to control simulated robots using ros2_control framework.</description>
   <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
   <author>Alejandro Hernández</author>
@@ -18,6 +18,7 @@
   <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>yaml_cpp_vendor</depend>
+  <depend>rclcpp_lifecycle</depend>
   <depend>urdf</depend>
   <depend>hardware_interface</depend>
   <depend>controller_manager</depend>
