--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e61a993
-	base = 4891e5f
-	trim = 
-	trimbase = 
+	base = 28693be
+	trim = ign_ros2_control_demos
+	trimbase = 4891e5f
