--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e61a993
-	base = 37d5bb7
-	trim = 
-	trimbase = 
+	base = c6873c7
+	trim = ign_ros2_control
+	trimbase = 37d5bb7
