--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/ign_ros2_control
-	previous = 
-	base = c854bf0
+	previous = c854bf0
+	base = a286ac5
 	trim = 
 	trimbase = 
