--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/ign_ros2_control_demos
-	previous = 
-	base = 28693be
+	previous = 28693be
+	base = 8bddc10
 	trim = 
 	trimbase = 
