--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/ign_ros2_control_demos
-	previous = 
-	base = ad424b6
+	previous = ad424b6
+	base = cd314ee
 	trim = 
 	trimbase = 
