--- a/tracks.yaml
+++ b/tracks.yaml
@@ -41,9 +41,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: galactic
+    last_version: 0.2.0
     name: upstream
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: https://github.com/ros2-gbp/ign_ros2_control-release
     release_tag: :{version}
     ros_distro: galactic
