--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d5d716d
-	base = cf50845
+	base = 39358f8
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = cf50845
