--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d5d716d
-	base = f71e859
+	base = fdb9917
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = f71e859
