--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5bd500f
-	base = fe24005
+	base = e9a73f4
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = fe24005
