--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5bd500f
-	base = 17b41c5
+	base = 955b148
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 17b41c5
