--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [edifice]
+        version: [citadel, edifice]
     env:
       IGNITION_VERSION: ${{ matrix.version }}
     container:
@@ -25,7 +25,7 @@ jobs:
         apt install -qq -y lsb-release wget curl gnupg2
         cd ..
         mkdir -p /home/ros2_ws/src
-        cp -r ign_ros2_control /home/ros2_ws/src/
+        cp -r gz_ros2_control /home/ros2_ws/src/
         sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list'
         curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
         apt-get update && apt-get upgrade -q -y
@@ -40,17 +40,17 @@ jobs:
         cd /home/ros2_ws/src/
         rosdep init
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro galactic
+        rosdep install --from-paths ./ -i -y --rosdistro foxy
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/galactic/local_setup.sh
+        . /opt/ros/foxy/local_setup.sh
         colcon build --packages-up-to ign_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/galactic/local_setup.sh
+        . /opt/ros/foxy/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select ign_ros2_control ign_ros2_control_demos
         colcon test-result
