--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -1,4 +1,4 @@
-FROM osrf/ros:galactic-desktop
+FROM osrf/ros:foxy-desktop
 
 # Make sure everything is up to date before building from source
 RUN apt-get update \
@@ -11,8 +11,7 @@ RUN apt-get update \
     curl \
   && apt-get clean
 
-RUN wget https://packages.osrfoundation.org/gazebo.key -O - | apt-key add - && \
-  sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list' && \
+RUN sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list' && \
   curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add - && \
   apt-get update && apt-get install -q -y --no-install-recommends \
     python3-colcon-ros \
@@ -22,12 +21,12 @@ RUN wget https://packages.osrfoundation.org/gazebo.key -O - | apt-key add - && \
 
 RUN mkdir -p /home/ros2_ws/src \
     && cd /home/ros2_ws/src \
-    && git clone https://github.com/ignitionrobotics/ign_ros2_control/ -b galactic \
+    && git clone https://github.com/ignitionrobotics/ign_ros2_control/ -b foxy \
     && rosdep update \
-    && rosdep install --from-paths ./ -i -y --rosdistro galactic
+    && rosdep install --from-paths ./ -i -y --rosdistro foxy
 
 RUN cd /home/ros2_ws/ \
-  && . /opt/ros/galactic/setup.sh \
+  && . /opt/ros/foxy/setup.sh \
   && colcon build --merge-install
 
 COPY entrypoint.sh /entrypoint.sh
