--- a/ign_ros2_control/package.xml
+++ b/ign_ros2_control/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>ign_ros2_control</name>
-  <version>0.4.0</version>
+  <version>0.1.3</version>
   <description>Ignition ros2_control package allows to control simulated robots using ros2_control framework.</description>
   <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
   <author>Alejandro Hernández</author>
@@ -10,17 +10,14 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>ament_index_cpp</depend>
-  <!-- default version to use in official ROS2 packages is Ignition Edifice for ROS2 Galactic -->
-  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo5</depend>
-  <depend condition="$IGNITION_VERSION == cidadel">ignition-gazebo3</depend>
+  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo3</depend>
+  <depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</depend>
   <depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</depend>
   <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
   <depend>ignition-plugin</depend>
   <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>yaml_cpp_vendor</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>urdf</depend>
   <depend>hardware_interface</depend>
   <depend>controller_manager</depend>
 
