Rebase from 'upstream'

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         apt install -qq -y lsb-release wget curl gnupg2
         cd ..
         mkdir -p /home/ros2_ws/src
-        cp -r ign_ros2_control /home/ros2_ws/src/
+        cp -r gz_ros2_control /home/ros2_ws/src/
         sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list'
         curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
         apt-get update && apt-get upgrade -q -y
