--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a023998
-	base = 96e5598
+	base = 3da3feb
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 96e5598
