--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a023998
-	base = ff47e42
+	base = 7aafcd9
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = ff47e42
