--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7987f55
-	base = af83474
+	base = bda1dc8
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = af83474
