--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7987f55
-	base = 0160da0
+	base = f9d90ef
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 0160da0
