Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.3": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.2": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.1": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.0": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"]}
+{"0.1.4": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.3": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.2": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.1": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"], "0.1.0": ["Alejandro Hernandez", "ahcorde@osrfoundation.org"]}
