--- a/ign_ros2_control/CMakeLists.txt
+++ b/ign_ros2_control/CMakeLists.txt
@@ -40,9 +40,9 @@ elseif("$ENV{IGNITION_VERSION}" STREQUAL "fortress")
   message(STATUS "Compiling against Ignition Fortress")
 
 else()
-  find_package(ignition-gazebo3 REQUIRED)
-  set(IGN_GAZEBO_VER ${ignition-gazebo3_VERSION_MAJOR})
-  message(STATUS "Compiling against Ignition Citadel")
+  find_package(ignition-gazebo5 REQUIRED)
+  set(IGN_GAZEBO_VER ${ignition-gazebo5_VERSION_MAJOR})
+  message(STATUS "Compiling against Ignition Edifice")
 endif()
 
 find_package(ignition-plugin1 REQUIRED)
@@ -65,6 +65,7 @@ ament_target_dependencies(${PROJECT_NAME}-system
   pluginlib
   rclcpp
   yaml_cpp_vendor
+  rclcpp_lifecycle
 )
 
 #########
@@ -73,6 +74,7 @@ add_library(ign_hardware_plugins SHARED
   src/ign_system.cpp
 )
 ament_target_dependencies(ign_hardware_plugins
+  rclcpp_lifecycle
   hardware_interface
   rclcpp
 )
