--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e9a8df7
-	base = 1a41cd4
+	base = d75897e
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 1a41cd4
