--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e9a8df7
-	base = 6191a37
+	base = f66cd86
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 6191a37
