--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [edifice]
+        version: [fortress]
     env:
       IGNITION_VERSION: ${{ matrix.version }}
     container:
-      image: ubuntu:20.04
+      image: ubuntu:22.04
     steps:
     - uses: actions/checkout@v2
     - name: Setup colcon workspace
@@ -26,13 +26,11 @@ jobs:
         cd ..
         mkdir -p /home/ros2_ws/src
         cp -r gz_ros2_control /home/ros2_ws/src/
-        sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list'
+        sh -c 'echo "deb http://packages.ros.org/ros2-testing/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-testing.list'
         curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
         apt-get update && apt-get upgrade -q -y
         apt-get update && apt-get install -qq -y \
           dirmngr \
-          gnupg2 \
-          lsb-release \
           python3-colcon-ros \
           python3-colcon-common-extensions \
           python3-rosdep \
@@ -40,17 +38,17 @@ jobs:
         cd /home/ros2_ws/src/
         rosdep init
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro galactic
+        rosdep install --from-paths ./ -i -y --rosdistro rolling --ignore-src
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/galactic/local_setup.sh
+        . /opt/ros/rolling/local_setup.sh
         colcon build --packages-up-to ign_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/galactic/local_setup.sh
+        . /opt/ros/rolling/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select ign_ros2_control ign_ros2_control_demos
         colcon test-result
