--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a95c1
-	base = 87fadd4
-	trim = 
-	trimbase = 
+	base = 3ac3812
+	trim = ign_ros2_control_demos
+	trimbase = 87fadd4
