--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a95c1
-	base = 2d56de1
-	trim = 
-	trimbase = 
+	base = 405c02f
+	trim = ign_ros2_control
+	trimbase = 2d56de1
