--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ign_ros2_control_demos
-	previous = 
-	base = 3ac3812
+	previous = 3ac3812
+	base = 9fee14f
 	trim = 
 	trimbase = 
