--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ign_ros2_control_demos
-	previous = 
-	base = 5fd29f2
+	previous = 5fd29f2
+	base = 6589562
 	trim = 
 	trimbase = 
