--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ign_ros2_control
-	previous = 
-	base = 405c02f
+	previous = 405c02f
+	base = 9e31283
 	trim = 
 	trimbase = 
