--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ign_ros2_control
-	previous = 
-	base = 7669519
+	previous = 7669519
+	base = ab9b0a0
 	trim = 
 	trimbase = 
