--- a/ign_ros2_control/CMakeLists.txt
+++ b/ign_ros2_control/CMakeLists.txt
@@ -40,9 +40,9 @@ elseif("$ENV{IGNITION_VERSION}" STREQUAL "fortress")
   message(STATUS "Compiling against Ignition Fortress")
 
 else()
-  find_package(ignition-gazebo6 REQUIRED)
-  set(IGN_GAZEBO_VER ${ignition-gazebo6_VERSION_MAJOR})
-  message(STATUS "Compiling against Ignition Fortress")
+  find_package(ignition-gazebo3 REQUIRED)
+  set(IGN_GAZEBO_VER ${ignition-gazebo3_VERSION_MAJOR})
+  message(STATUS "Compiling against Ignition Citadel")
 endif()
 
 find_package(ignition-plugin1 REQUIRED)
@@ -65,7 +65,6 @@ ament_target_dependencies(${PROJECT_NAME}-system
   pluginlib
   rclcpp
   yaml_cpp_vendor
-  rclcpp_lifecycle
 )
 
 #########
@@ -74,7 +73,6 @@ add_library(ign_hardware_plugins SHARED
   src/ign_system.cpp
 )
 ament_target_dependencies(ign_hardware_plugins
-  rclcpp_lifecycle
   hardware_interface
   rclcpp
 )
