--- a/ign_ros2_control_demos/package.xml
+++ b/ign_ros2_control_demos/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ign_ros2_control_demos</name>
-  <version>0.5.0</version>
+  <version>0.1.5</version>
   <description>ign_ros2_control_demos</description>
 
   <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>
 
   <license>Apache License 2.0</license>
 
-  <url type="website">https://github.com/ros-controls/gz_ros2_control/blob/main/README.md</url>
+  <url type="website">https://github.com/ros-controls/gz_ros2_control/blob/master/README.md</url>
   <url type="bugtracker">https://github.com/ros-controls/gz_ros2_control/issues</url>
   <url type="repository">https://github.com/ros-controls/gz_ros2_control</url>
 
@@ -29,7 +29,7 @@
   <exec_depend>hardware_interface</exec_depend>
   <exec_depend>ign_ros2_control</exec_depend>
   <exec_depend>imu_sensor_broadcaster</exec_depend>
-  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>joint_state_controller</exec_depend>
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
