--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d2a0ad2
-	base = 52faa91
+	base = 7d9780a
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 52faa91
