--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d2a0ad2
-	base = 94347dd
+	base = 2df3085
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 94347dd
