--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bdb7658
-	base = bd1f7a1
+	base = 462ad62
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = bd1f7a1
