--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bdb7658
-	base = 01cf752
+	base = 9ef071a
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 01cf752
