--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 37ec64d
-	base = b13605f
+	base = bf025ce
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = b13605f
