--- a/ign_ros2_control_demos/package.xml
+++ b/ign_ros2_control_demos/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ign_ros2_control_demos</name>
-  <version>0.5.0</version>
+  <version>0.6.0</version>
   <description>ign_ros2_control_demos</description>
 
   <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>
 
   <license>Apache License 2.0</license>
 
-  <url type="website">https://github.com/ros-controls/gz_ros2_control/blob/main/README.md</url>
+  <url type="website">https://github.com/ros-controls/gz_ros2_control/blob/master/README.md</url>
   <url type="bugtracker">https://github.com/ros-controls/gz_ros2_control/issues</url>
   <url type="repository">https://github.com/ros-controls/gz_ros2_control</url>
 
@@ -33,6 +33,7 @@
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>ros_ign_gazebo</exec_depend>
@@ -40,6 +41,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>velocity_controllers</exec_depend>
   <exec_depend>diff_drive_controller</exec_depend>
+  <exec_depend>tricycle_controller</exec_depend>
   <exec_depend>xacro</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
