--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 37ec64d
-	base = 44f3a51
+	base = 62e6661
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 44f3a51
