--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec70110
-	base = 94b71e9
+	base = 7c48f13
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 94b71e9
