--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,6 @@ name: Ignition ros2 control CI
 
 on:
   pull_request:
-  push:
-    branches: [ master ]
 
 jobs:
   build:
@@ -38,17 +36,17 @@ jobs:
         cd /home/ros2_ws/src/
         rosdep init
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro rolling --ignore-src
+        rosdep install --from-paths ./ -i -y --rosdistro humble --ignore-src
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/rolling/local_setup.sh
+        . /opt/ros/humble/local_setup.sh
         colcon build --packages-up-to ign_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/rolling/local_setup.sh
+        . /opt/ros/humble/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select ign_ros2_control ign_ros2_control_demos
         colcon test-result
