--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0c1f62e
-	base = 71f7802
-	trim = 
-	trimbase = 
+	base = e2a7054
+	trim = ign_ros2_control_demos
+	trimbase = 71f7802
