--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0c1f62e
-	base = 44f5a71
-	trim = 
-	trimbase = 
+	base = fbbcb74
+	trim = ign_ros2_control
+	trimbase = 44f5a71
