--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ign_ros2_control
-	previous = 
-	base = fbbcb74
+	previous = fbbcb74
+	base = f5cca49
 	trim = 
 	trimbase = 
