--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ign_ros2_control
-	previous = 
-	base = 787be9b
+	previous = 787be9b
+	base = add6116
 	trim = 
 	trimbase = 
