--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ign_ros2_control_demos
-	previous = 
-	base = e2a7054
+	previous = e2a7054
+	base = eaf763d
 	trim = 
 	trimbase = 
