--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ign_ros2_control_demos
-	previous = 
-	base = 3d6ba59
+	previous = 3d6ba59
+	base = 2640ccd
 	trim = 
 	trimbase = 
