--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0c1f62e
-	base = 1a35bdb
+	base = 1bce600
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 1a35bdb
