--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0c1f62e
-	base = 6db3147
+	base = b00522f
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 6db3147
