--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec70110
-	base = 87d8243
+	base = 4112910
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 87d8243
