--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec70110
-	base = fc4b928
+	base = a27908b
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = fc4b928
