--- a/ign_ros2_control_demos/CMakeLists.txt
+++ b/ign_ros2_control_demos/CMakeLists.txt
@@ -59,6 +59,12 @@ ament_target_dependencies(example_tricycle_drive
   geometry_msgs
 )
 
+add_executable(example_gripper examples/example_gripper.cpp)
+ament_target_dependencies(example_gripper
+  rclcpp
+  std_msgs
+)
+
 if(BUILD_TESTING)
   find_package(ament_cmake_gtest REQUIRED)
   find_package(ament_lint_auto REQUIRED)
@@ -74,6 +80,7 @@ install(
     example_effort
     example_diff_drive
     example_tricycle_drive
+    example_gripper
   DESTINATION
     lib/${PROJECT_NAME}
 )
