--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3149783
-	base = 57e0217
+	base = b013b88
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 57e0217
