--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3149783
-	base = 196a7cc
+	base = 74c2bde
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 196a7cc
