--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3149783
-	base = c1abeab
+	base = 76487fc
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = c1abeab
