Rebase from 'upstream'

--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND noninteractive
 ENV IGNITION_VERSION fortress
-ENV ROS_DISTRO rolling
+ENV ROS_DISTRO humble
 
 # Make sure everything is up to date before building from source
 RUN apt-get update \
