--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3149783
-	base = 19731c7
+	base = 624ee36
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 19731c7
