--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec70110
-	base = 5feb140
+	base = d3595cd
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 5feb140
