--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec70110
-	base = 7f59e66
+	base = 9e8cdd4
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 7f59e66
