--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5e295b
-	base = f06d97d
+	base = 7510969
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = f06d97d
