--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5e295b
-	base = 9568ef9
+	base = 52fe6df
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 9568ef9
