--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 32c318d
-	base = 4017416
-	trim = 
-	trimbase = 
+	base = 15cdc9c
+	trim = gz_ros2_control_tests
+	trimbase = 4017416
