--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 32c318d
-	base = ca31a86
-	trim = 
-	trimbase = 
+	base = c804a45
+	trim = gz_ros2_control
+	trimbase = ca31a86
