--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 32c318d
-	base = a6fbf16
-	trim = 
-	trimbase = 
+	base = 18a4b15
+	trim = gz_ros2_control_demos
+	trimbase = a6fbf16
