--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_ros2_control_demos
-	previous = 
-	base = 18a4b15
+	previous = 18a4b15
+	base = c6e0a61
 	trim = 
 	trimbase = 
