--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_ros2_control
-	previous = 
-	base = c804a45
+	previous = c804a45
+	base = 7c5e1d2
 	trim = 
 	trimbase = 
