--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control
-	previous = 
-	base = 2a56caf
+	previous = 2a56caf
+	base = 7f39fd8
 	trim = 
 	trimbase = 
