--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_ros2_control_tests
-	previous = 
-	base = 15cdc9c
+	previous = 15cdc9c
+	base = b389b5d
 	trim = 
 	trimbase = 
