--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control_tests
-	previous = 
-	base = f973eda
+	previous = f973eda
+	base = 21ed7d8
 	trim = 
 	trimbase = 
