--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 00cd727
-	base = f5c491b
-	trim = 
-	trimbase = 
+	base = a0736e3
+	trim = gz_ros2_control_tests
+	trimbase = f5c491b
