--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,11 +42,11 @@ jobs:
       run: |
         cd /home/ros2_ws/
         . /opt/ros/humble/local_setup.sh
-        colcon build --packages-up-to ign_ros2_control_demos
+        colcon build --packages-up-to ign_ros2_control_demos gz_ros2_control_tests
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
         . /opt/ros/humble/local_setup.sh
-        colcon test --event-handlers console_direct+ --packages-select ign_ros2_control ign_ros2_control_demos
+        colcon test --event-handlers console_direct+ --packages-select ign_ros2_control ign_ros2_control_demos gz_ros2_control_tests
         colcon test-result
