--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 00cd727
-	base = 8771b7a
+	base = eded0d1
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 8771b7a
