--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 00cd727
-	base = de402a5
+	base = 32e8bfa
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = de402a5
