--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/gz_ros2_control_tests
-	previous = 
-	base = a0736e3
+	previous = a0736e3
+	base = bc18001
 	trim = 
 	trimbase = 
