--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/gz_ros2_control_tests
-	previous = 
-	base = 50e2cf4
+	previous = 50e2cf4
+	base = 5213c15
 	trim = 
 	trimbase = 
