--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ead104a
-	base = fa34503
-	trim = 
-	trimbase = 
+	base = 7e2d1a7
+	trim = gz_ros2_control_tests
+	trimbase = fa34503
