--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ead104a
-	base = 2605fda
-	trim = 
-	trimbase = 
+	base = f1705d0
+	trim = gz_ros2_control
+	trimbase = 2605fda
