--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ead104a
-	base = 3be52f4
-	trim = 
-	trimbase = 
+	base = 2c77d24
+	trim = gz_ros2_control_demos
+	trimbase = 3be52f4
