--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/gz_ros2_control
-	previous = 
-	base = f1705d0
+	previous = f1705d0
+	base = 25b04cb
 	trim = 
 	trimbase = 
