--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/gz_ros2_control
-	previous = 
-	base = 63164d4
+	previous = 63164d4
+	base = 8dfa073
 	trim = 
 	trimbase = 
