--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/gz_ros2_control_tests
-	previous = 
-	base = 7e2d1a7
+	previous = 7e2d1a7
+	base = 0c5b00a
 	trim = 
 	trimbase = 
