--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/gz_ros2_control_tests
-	previous = 
-	base = f3ed333
+	previous = f3ed333
+	base = 47cfe0a
 	trim = 
 	trimbase = 
