--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/gz_ros2_control_demos
-	previous = 
-	base = 2c77d24
+	previous = 2c77d24
+	base = d95f78c
 	trim = 
 	trimbase = 
