--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ead104a
-	base = c64eea9
+	base = dfb5a13
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = c64eea9
