--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ead104a
-	base = 9152acd
+	base = 3189738
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 9152acd
