--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ead104a
-	base = ffbf3bf
+	base = 9374a91
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = ffbf3bf
