--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6618da2
-	base = 123a4c7
+	base = af6d0ca
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 123a4c7
