--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6618da2
-	base = 8b944a7
+	base = bc51c7c
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 8b944a7
