--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6618da2
-	base = 7639cdb
+	base = 79edebf
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 7639cdb
