--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bb4e40a
-	base = 40b13f2
+	base = f9239b5
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 40b13f2
