--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bb4e40a
-	base = 89d67a0
+	base = f721660
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 89d67a0
