--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bb4e40a
-	base = a5a1239
+	base = 6c9b4a4
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = a5a1239
