--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,15 @@ if("$ENV{GZ_VERSION}" STREQUAL "garden")
   set(GZ_PLUGIN gz-plugin${GZ_PLUGIN_VER}::register)
   set(GZ_SIM gz-sim${GZ_SIM_VER}::core)
   add_definitions(-DGZ_HEADERS)
+elseif("$ENV{GZ_VERSION}" STREQUAL "harmonic")
+  find_package(gz-sim8 REQUIRED)
+  set(GZ_SIM_VER ${gz-sim8_VERSION_MAJOR})
+  message(STATUS "Compiling against Gazebo Harmonic")
+  find_package(gz-plugin2 REQUIRED)
+  set(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
+  set(GZ_PLUGIN gz-plugin${GZ_PLUGIN_VER}::register)
+  set(GZ_SIM gz-sim${GZ_SIM_VER}::core)
+  add_definitions(-DGZ_HEADERS)
 else()
   find_package(ignition-gazebo6 REQUIRED)
   set(GZ_SIM_VER ${ignition-gazebo6_VERSION_MAJOR})
