--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cf3f522
-	base = 61132e7
+	base = 94e3611
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 61132e7
