Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.1.1": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"]}
+{"1.2.0": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "1.1.1": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"]}
