--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5f878ae
-	base = 9131afe
+	base = 7dcda6d
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 9131afe
