--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5f878ae
-	base = 5ca7a7c
+	base = 0a55e9a
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 5ca7a7c
