--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5f878ae
-	base = be2876d
+	base = ceaa653
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = be2876d
