--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aa92f20
-	base = 44995bb
+	base = 8608884
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 44995bb
