--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = af0ef60
-	base = a6375df
+	base = da7b67e
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = a6375df
