--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = af0ef60
-	base = 7fd0b49
+	base = f4e8a41
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 7fd0b49
