--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 76a151f
-	base = 86a6d5a
+	base = 28cd7be
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 86a6d5a
