--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 76a151f
-	base = b0a5f88
+	base = bf83fdb
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = b0a5f88
