--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08d2c92
-	base = f875b83
+	base = b852747
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = f875b83
