--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08d2c92
-	base = 739ea89
+	base = fee1a7e
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 739ea89
