--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08d2c92
-	base = 950898a
+	base = afee5ab
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 950898a
