--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d451ea9
-	base = a54cd86
+	base = b8ed012
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = a54cd86
