--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d451ea9
-	base = c6b16b1
+	base = 2613491
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = c6b16b1
