--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8c24f72
-	base = 32f8df9
+	base = bb59e48
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 32f8df9
