--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2adfec1
-	base = f79bdd9
+	base = b0efe45
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = f79bdd9
