--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 89e9785
-	base = 86bc01b
+	base = c7cc98f
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 86bc01b
