--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f6e349
-	base = 252e0b0
-	trim = 
-	trimbase = 
+	base = a69af56
+	trim = gz_ros2_control_tests
+	trimbase = 252e0b0
