--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f6e349
-	base = f1c1028
-	trim = 
-	trimbase = 
+	base = 037fafc
+	trim = gz_ros2_control
+	trimbase = f1c1028
