--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f6e349
-	base = 92bf3fe
-	trim = 
-	trimbase = 
+	base = 029fe8f
+	trim = gz_ros2_control_demos
+	trimbase = 92bf3fe
