--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gz_ros2_control_tests
-	previous = 
-	base = a69af56
+	previous = a69af56
+	base = 36f4da8
 	trim = 
 	trimbase = 
