--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_ros2_control_tests
-	previous = 
-	base = 61f008a
+	previous = 61f008a
+	base = f2953f8
 	trim = 
 	trimbase = 
