--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_ros2_control_demos
-	previous = 
-	base = 03b78cb
+	previous = 03b78cb
+	base = 361ec0c
 	trim = 
 	trimbase = 
