--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_ros2_control_tests
-	previous = 
-	base = 1c6655b
+	previous = 1c6655b
+	base = a9ac74d
 	trim = 
 	trimbase = 
