--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_ros2_control_demos
-	previous = 
-	base = 0b92248
+	previous = 0b92248
+	base = faeee91
 	trim = 
 	trimbase = 
