--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/gz_ros2_control_tests
-	previous = 
-	base = 719f18e
+	previous = 719f18e
+	base = ea29897
 	trim = 
 	trimbase = 
