--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/gz_ros2_control_demos
-	previous = 
-	base = a0b2958
+	previous = a0b2958
+	base = 5f01ed7
 	trim = 
 	trimbase = 
