--- a/gz_ros2_control/package.xml
+++ b/gz_ros2_control/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>gz_ros2_control</name>
-  <version>1.2.2</version>
+  <version>1.3.0</version>
   <description>Gazebo ros2_control package allows to control simulated robots using ros2_control framework.</description>
   <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
@@ -11,16 +11,9 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>ament_index_cpp</depend>
-  <!-- default version to use in official ROS2 packages is GAzebo Fortress for ROS2 Rolling -->
-  <depend condition="$GZ_VERSION == ''">ignition-gazebo6</depend>
-  <depend condition="$GZ_VERSION == fortress">ignition-gazebo6</depend>
-  <depend condition="$GZ_VERSION == garden">gz-sim7</depend>
-  <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>
-
-  <depend condition="$GZ_VERSION == ''">ignition-plugin</depend>
-  <depend condition="$GZ_VERSION == fortress">ignition-plugin</depend>
-  <depend condition="$GZ_VERSION == garden">gz-plugin2</depend>
-  <depend condition="$GZ_VERSION == harmonic">gz-plugin2</depend>
+  <!-- default version to use in official ROS 2 packages is Gazebo Harmonic for ROS 2 Rolling -->
+  <depend>gz_sim_vendor</depend>
+  <depend>gz_plugin_vendor</depend>
   <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>yaml_cpp_vendor</depend>
