--- a/gz_ros2_control_demos/package.xml
+++ b/gz_ros2_control_demos/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>gz_ros2_control_demos</name>
-  <version>1.2.2</version>
+  <version>1.3.0</version>
   <description>gz_ros2_control_demos</description>
 
   <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>
@@ -37,10 +37,7 @@
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend condition="$GZ_VERSION == ''">ros_gz_sim</exec_depend>
-  <exec_depend condition="$GZ_VERSION == 'harmonic'">ros_gz_sim</exec_depend>
-  <exec_depend condition="$GZ_VERSION == 'garden'">ros_gz_sim</exec_depend>
-  <exec_depend condition="$GZ_VERSION == 'fortress'">ros_ign_gazebo</exec_depend>
+  <exec_depend>ros_gz_sim</exec_depend>
   <exec_depend>ros2controlcli</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>velocity_controllers</exec_depend>
