--- a/gz_ros2_control_tests/package.xml
+++ b/gz_ros2_control_tests/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>gz_ros2_control_tests</name>
-  <version>1.2.2</version>
+  <version>1.3.0</version>
   <description>Gazebo ros2 control tests</description>
   <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
   <license>Apache License 2.0</license>
@@ -28,10 +28,7 @@
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend condition="$GZ_VERSION == ''">ros_gz_sim</exec_depend>
-  <exec_depend condition="$GZ_VERSION == 'harmonic'">ros_gz_sim</exec_depend>
-  <exec_depend condition="$GZ_VERSION == 'garden'">ros_gz_sim</exec_depend>
-  <exec_depend condition="$GZ_VERSION == 'fortress'">ros_ign_gazebo</exec_depend>
+  <exec_depend>ros_gz_sim</exec_depend>
   <exec_depend>ros2controlcli</exec_depend>
   <exec_depend>xacro</exec_depend>
 
