--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26c1cab
-	base = 6e79dc8
+	base = 2d9c463
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 6e79dc8
