--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26c1cab
-	base = 3b98c3c
+	base = 83a186e
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 3b98c3c
