--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control_demos
-	previous = 
-	base = ba7e9dc
+	previous = ba7e9dc
+	base = 14285b2
 	trim = 
 	trimbase = 
