--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control_tests
-	previous = 
-	base = 7735607
+	previous = 7735607
+	base = 663bbb9
 	trim = 
 	trimbase = 
