--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/gz_ros2_control
-	previous = 
-	base = 2722dcf
+	previous = 2722dcf
+	base = 3b0e3f2
 	trim = 
 	trimbase = 
