--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/gz_ros2_control_tests
-	previous = 
-	base = d8ee890
+	previous = d8ee890
+	base = 9114955
 	trim = 
 	trimbase = 
