--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9f9e04e
-	base = 05b9b35
+	base = 5ec997a
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 05b9b35
