--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9f9e04e
-	base = 309b02e
+	base = cacb93e
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 309b02e
