--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ba02047
-	base = f0ba69d
+	base = 0c95510
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = f0ba69d
