--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d2c291e
-	base = c15fef4
+	base = c2bab61
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = c15fef4
