--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d2c291e
-	base = 3b74c86
+	base = 4aedc39
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 3b74c86
