--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3b32bf8
-	base = cd37ab3
+	base = 7d1f058
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = cd37ab3
