--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3b32bf8
-	base = 91cd97c
+	base = 4c8a5b1
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 91cd97c
