--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 60bbe4f
-	base = ecb283f
+	base = bd0c1af
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = ecb283f
