--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 60bbe4f
-	base = 0e5fb57
+	base = 3452a02
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 0e5fb57
