--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control
-	previous = 
-	base = 5f9afad
+	previous = 5f9afad
+	base = 2c69c85
 	trim = 
 	trimbase = 
